[gd_scene load_steps=3 format=2]

[ext_resource path="res://Monsters.gd" type="Script" id=1]
[ext_resource path="res://Monster.tscn" type="PackedScene" id=2]

[node name="Monsters" type="Node2D"]
script = ExtResource( 1 )

[node name="Monster" parent="." instance=ExtResource( 2 )]

[node name="Monster2" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster3" parent="." instance=ExtResource( 2 )]
type = 2

[node name="Monster4" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster5" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster6" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster7" parent="." instance=ExtResource( 2 )]
type = 2

[node name="Monster8" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster9" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster10" parent="." instance=ExtResource( 2 )]
type = 2

[node name="Monster11" parent="." instance=ExtResource( 2 )]

[node name="Monster12" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster13" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster14" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster15" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster16" parent="." instance=ExtResource( 2 )]
type = 3

[node name="Monster17" parent="." instance=ExtResource( 2 )]
type = 1

[node name="Monster18" parent="." instance=ExtResource( 2 )]
type = 2

[node name="Monster19" parent="." instance=ExtResource( 2 )]

[node name="Monster20" parent="." instance=ExtResource( 2 )]
type = 2

[node name="Timer" type="Timer" parent="."]

[node name="Grace_Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Grace_Timer" to="." method="_on_Grace_Timer_timeout"]
